Simplify and extract more into FA abstraction.